--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.2.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.5.5"
