--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-datocms": "^2.3.0",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
+    "gsap": "^3.4.2",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
