--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.28",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
+    "@emotion/core": "^10.0.34",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
     "bootstrap": "^4.5.0",
