--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/core": "^10.0.34",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
+    "body-scroll-lock": "^3.0.3",
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.12",
     "gatsby-background-image": "^1.1.1",
